force-app/main/default/objects/CPQ_Service_Branches__c/CPQ_Service_Branches__c.object-meta.xml
<CustomObject>
    <label>Service Branch</label>
    <nameField>
        <label>Regional Costing Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>