force-app/main/default/objects/CPQ_Service_Branches__c/fields/CPQ2_Approver__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>purpose: https://trello.com/c/E9Y67NTk/825-approval-process-flow-update-new-gm-tier-approval</description>
    <label>CPQ2 Approver</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>user selected must be active</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Branches</relationshipName>
    <type>Lookup</type>
</CustomField>