force-app/main/default/objects/CPQ_Service_Branches__c/fields/CPQ_Average_Cost_Minute__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Average_Cost_Minute__c</fullName>
    <label>Average Cost/Minute</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>