force-app/main/default/objects/CPQ_Service_Branches__c/fields/CPQ_Direct_Cost_of_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Direct_Cost_of_Revenue__c</fullName>
    <label>Direct Cost % of Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>