force-app/main/default/objects/CPQ_Service_Branches__c/fields/CPQ_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CPQ_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>