force-app/main/default/objects/CPQ_Service_Branches__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CPQ_Average_Cost_Minute__c</columns>
    <columns>CPQ_Average_Drive_Stem_Cost__c</columns>
    <columns>CPQ_Direct_Cost_of_Revenue__c</columns>
    <columns>CPQ2_Approver__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>